# trinity-v0

./: README.md
app/: README.md  package-lock.json  package.json
app/components/: JobMatching.tsx  JobMatchingForm.tsx
app/laconic/: index.html  laconic_ot.d.ts  laconic_ot.js  laconic_ot_bg.wasm  laconic_ot_bg.wasm.d.ts  package.json
app/pages/: index.tsx
app/public/circuits/: job_matching.txt
app/test/: HIRING.md
app/utils/: jobMatchingUtils.ts
circuits/: Cargo.toml  job_matching.txt
circuits/src/: demo.rs  hiring.rs  hiring_original.rs  main.rs
jigg/: .eslintrc  README.md  package.json
jigg/src/: evaluate.js  garble.js  jigg.js  jiggClient.js
jigg/src/modules/: gate.js  label.js
jigg/src/parse/: circuit.js  parse.js
laconic/: Cargo.toml  table.py
laconic/benches/: laconic_ot.rs
laconic/pkg/: index.html  laconic_ot.js  laconic_ot_bg.wasm  laconic_ot_bg.wasm.d.ts  package.json
laconic/src/: kzg_types.rs  laconic_ot.rs  lib.rs  wasm_bindings.rs
