[package]
name = "laconic-ot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-bls12-381 =  "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
blake3 = "1.5"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "laconic_ot"
harness = false

[features]
asm = ["ark-ff/asm"]
parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-poly/parallel"]
print-trace = ["ark-std/print-trace"]
